// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Тестируем компонент input Тестируем рендер компонента input 1`] = `
<Input
  label="label"
  type="text"
>
  <div
    className="formItem"
  >
    <label
      className="formLabel"
      htmlFor="undefined"
    >
      label
    </label>
    <input
      className="formText"
      type="text"
    />
  </div>
</Input>
`;

exports[`Тестируем компонент input Тестируем событие 1`] = `
<Input
  name="value"
  onChange={[Function]}
  type="text"
  value="test1"
>
  <div
    className="formItem"
  >
    <input
      className="formText"
      name="value"
      onChange={[Function]}
      type="text"
      value="test1"
    />
  </div>
</Input>
`;

exports[`Тестируем компонент input Тестируем событие 2`] = `
<Input
  name="value"
  onChange={[Function]}
  type="text"
  value="test2"
>
  <div
    className="formItem"
  >
    <input
      className="formText"
      name="value"
      onChange={[Function]}
      type="text"
      value="test2"
    />
  </div>
</Input>
`;
